--- a/src/Engine/Engine.vcxproj
+++ b/src/Engine/Engine.vcxproj
@@ -93,20 +93,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BaseApp.cpp" />
+    <ClCompile Include="Core.cpp" />
     <ClCompile Include="EngineApp.cpp" />
-    <ClCompile Include="RenderApp.cpp" />
+    <ClCompile Include="LogSystem.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="WindowSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Base.h" />
-    <ClInclude Include="BaseApp.h" />
+    <ClInclude Include="Core.h" />
     <ClInclude Include="EngineApp.h" />
-    <ClInclude Include="RenderApp.h" />
+    <ClInclude Include="LogSystem.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Systems.h" />
+    <ClInclude Include="WindowsInclude.h" />
+    <ClInclude Include="WindowSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
