--- a/src/Engine/Engine.vcxproj
+++ b/src/Engine/Engine.vcxproj
@@ -95,8 +95,11 @@
   <ItemGroup>
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="EngineApp.cpp" />
+    <ClCompile Include="EngineString.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="LogSystem.cpp" />
+    <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="RenderCamera.cpp" />
     <ClCompile Include="RenderCore.cpp" />
     <ClCompile Include="RenderResources.cpp" />
@@ -114,14 +117,19 @@
     <ClInclude Include="Core.h" />
     <ClInclude Include="DebugNew.h" />
     <ClInclude Include="EngineApp.h" />
+    <ClInclude Include="EngineString.h" />
+    <ClInclude Include="EnumArray.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="Keyboard.h" />
     <ClInclude Include="LogSystem.h" />
+    <ClInclude Include="Mouse.h" />
     <ClInclude Include="RenderCamera.h" />
     <ClInclude Include="RenderCore.h" />
     <ClInclude Include="RenderResources.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Systems.h" />
+    <ClInclude Include="Utf.h" />
     <ClInclude Include="WindowsInclude.h" />
     <ClInclude Include="WindowSystem.h" />
   </ItemGroup>
