--- a/src/Engine/Engine.vcxproj
+++ b/src/Engine/Engine.vcxproj
@@ -103,6 +103,8 @@
     <ClCompile Include="LogSystem.cpp" />
     <ClCompile Include="MemoryInputStream.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="nRenderCore.cpp" />
+    <ClCompile Include="nRenderResources.cpp" />
     <ClCompile Include="RenderCamera.cpp" />
     <ClCompile Include="RenderCore.cpp" />
     <ClCompile Include="RenderResources.cpp" />
@@ -132,6 +134,8 @@
     <ClInclude Include="LogSystem.h" />
     <ClInclude Include="MemoryInputStream.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="nRenderCore.h" />
+    <ClInclude Include="nRenderResources.h" />
     <ClInclude Include="PlatformEvent.h" />
     <ClInclude Include="RenderCamera.h" />
     <ClInclude Include="RenderCore.h" />
