--- a/src/Game/Game.vcxproj.filters
+++ b/src/Game/Game.vcxproj.filters
@@ -47,28 +47,31 @@
     <Filter Include="Temp">
       <UniqueIdentifier>{165822fe-6339-4e39-93e5-68bd572e0702}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Temp\shader">
+    <Filter Include="GameData">
+      <UniqueIdentifier>{2f9e7249-9b24-4ff5-9e76-9b477e2acf9c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader">
       <UniqueIdentifier>{84bbf24f-97da-4444-b43e-7cdf2ce82912}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="blur.frag.glsl">
-      <Filter>Temp\shader</Filter>
+      <Filter>Shader</Filter>
     </None>
     <None Include="blur.vert.glsl">
-      <Filter>Temp\shader</Filter>
+      <Filter>Shader</Filter>
     </None>
     <None Include="gbuffer.frag.glsl">
-      <Filter>Temp\shader</Filter>
+      <Filter>Shader</Filter>
     </None>
     <None Include="gbuffer.vert.glsl">
-      <Filter>Temp\shader</Filter>
+      <Filter>Shader</Filter>
     </None>
     <None Include="main.frag.glsl">
-      <Filter>Temp\shader</Filter>
+      <Filter>Shader</Filter>
     </None>
     <None Include="main.vert.glsl">
-      <Filter>Temp\shader</Filter>
+      <Filter>Shader</Filter>
     </None>
   </ItemGroup>
 </Project>
