--- a/src/Engine/Engine.vcxproj
+++ b/src/Engine/Engine.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="EngineApp.cpp" />
     <ClCompile Include="EngineString.cpp" />
     <ClCompile Include="FileInputStream.cpp" />
+    <ClCompile Include="GenerateUUID.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="LogSystem.cpp" />
@@ -115,6 +116,7 @@
     <ClCompile Include="WindowSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CheckSupportOGLExtensions.h" />
     <ClInclude Include="Clock.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="DebugNew.h" />
@@ -123,6 +125,7 @@
     <ClInclude Include="EngineTime.h" />
     <ClInclude Include="EnumArray.h" />
     <ClInclude Include="FileInputStream.h" />
+    <ClInclude Include="GenerateUUID.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="InputStream.h" />
     <ClInclude Include="Keyboard.h" />
